# dockumentor

./: pyproject.toml  readme.md
src/dockumentor/: dockumentor.py
src/dockumentor/templates/: dockumentor_compose.md
